--- a/classification_models.ipynb
+++ b/classification_models.ipynb
@@ -1394,6 +1394,51 @@
     "y_pred = lg_model.predict(X_test)\n",
     "print(classification_report(y_test,y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_model = SVC()\n",
+    "svm_model = svm_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.81      0.79      0.80      1328\n",
+      "           1       0.89      0.90      0.89      2476\n",
+      "\n",
+      "    accuracy                           0.86      3804\n",
+      "   macro avg       0.85      0.84      0.84      3804\n",
+      "weighted avg       0.86      0.86      0.86      3804\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = svm_model.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
